fixed alignment of heading and footer

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .navbar-brand {
   color: white;
 }
@@ -24,12 +28,9 @@ body {
   background-size: cover;
   height: 100%;
   width: 100%;
-}
-
-.title-container {
-  position: absolute;
-  top: 40%;
-  left: 22%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -96,12 +97,12 @@ body {
 }
 
 footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  text-align: center;
   font-size: 12px;
   height: 20%;
   background-color: #222222;
+  padding-top: 20px;
 }
 
 footer a {
@@ -123,6 +124,7 @@ footer a {
 
   background-size: cover;
   text-align: center;
+  height: 100%;
 }
 
 .signup-header {
@@ -134,7 +136,7 @@ footer a {
   color: #222222;
   border-radius: 10px;
   padding: 30px;
-  width: 40%;
+  width: 65%;
   margin: auto;
 }
 
